# Hello

hello_c/: xmake.lua
hello_cpp/: xmake.lua
hello_cs/: HelloCS.sln
hello_py/: pyproject.toml
hello_rs/src/: main.rs
