[tool.poetry]
name = "hello-py"
version = "0.1.0"
description = ""
authors = ["RJ Xu <Rongji.Xu@outlook.com>"]
readme = "README.md"
packages = [{include = "hello_py", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff]
line-length = 120
